tests/file_test/testdata/lex_error_across_multi_lines.llang
let s = "abc
def
(\z)
xyz";
